"Analytics alignment issue fixed"

--- a/src/main/java/org/ednovo/gooru/client/mvp/analytics/util/res_tabContainer.css
+++ b/src/main/java/org/ednovo/gooru/client/mvp/analytics/util/res_tabContainer.css
@@ -1,6 +1,7 @@
 .buttonsPanel {
 	width: auto;
 	margin: 0 10px;
+	white-space: normal;
 }
 
 .addButonStyle {
