--- a/src/main/java/org/ednovo/gooru/client/mvp/analytics/util/tabContainer.css
+++ b/src/main/java/org/ednovo/gooru/client/mvp/analytics/util/tabContainer.css
@@ -44,6 +44,7 @@
 	position: relative;
 	display: inline-block;
 	vertical-align: middle;
+	white-space: nowrap;
 }
 .viewSummaryText {
 	float: left;
